<resources>
    <string name="app_name">Walk Walk Revolution</string>
    <string name="title_activity_main">WWR</string>
    <string name="title_home">Home</string>
    <string name="title_walk">Walk</string>
    <string name="title_routes">Routes</string>
    <string name="undefined">undefined</string>
    <string name="tx_new_walk">New Walk</string>
    <string name="tx_curr_steps">STEPS:</string>
    <string name="tx_cur_dist">DISTANCE:</string>
    <string name="tx_cur_time">TIME:</string>
    <string name="step_empty">0 steps</string>
    <string name="walk_step_empty">0</string>
    <string name="dist_empty">0.00 mi</string>
    <string name="time_empty">00:00:00</string>
    <string name="bt_start">START</string>
    <string name="bt_stop">STOP</string>
    <string name="bt_continue">Continue</string>
    <string name="bt_back">Back</string>
    <string name="permission_title">Walk Walk Revolution</string>
    <string name="permission_intro">Coach you to a healthier and more active life</string>
    <string name="permission_policy">By continuing, you agree to the Terms of Service</string>
    <string name="profile">My Profile</string>
    <string name="profile_detail">To ensure the accuracy, Please input your accurate information.</string>
    <string name="tx_height">Height</string>
    <string name="tx_feet">Feet</string>
    <string name="tx_in">In</string>

    <string name="mock_bt_start">START</string>
    <string name="mock_text_new_walk">New Mock Walk</string>
    <string name="mock_text_steps_title">Steps</string>
    <string name="mock_text_dist_title">Distance</string>
    <string name="mock_bt_add_steps">+ 500 Steps</string>

    <string name="never_completed">Never Completed</string>
    <string name="title_fragment_route_details">Route Details</string>
    <string name="details_notes_hint">Enter your route notes here…</string>
    <string name="details_notes_title">Notes</string>
    <string name="details_features_easy">Easy</string>
    <string name="details_features_medium">Medium</string>
    <string name="details_features_hard">Hard</string>
    <string name="details_features_hilly">Hilly</string>
    <string name="details_features_flat">Flat</string>
    <string name="details_features_street">Street</string>
    <string name="details_features_trail">Trail</string>
    <string name="details_features_even">Even</string>
    <string name="details_features_uneven">Uneven</string>
    <string name="not_favorite">Not Favorite</string>
    <string name="favorite">Favorite</string>
    <string name="details_features_loop">Loop</string>
    <string name="details_features_outandback">Out and Back</string>
    <string name="add_new_route">Add</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="lb_route_name"><font color="#e74c3c">*</font>Route Name</string>
    <string name="lb_starting_point">Starting Point</string>
    <string name="alert_route_name">Please Enter The Route Name!</string>
    <string name="alert_firstname">Please Enter Firstname!</string>
    <string name="alert_lastname">Please Enter Lastname!</string>
    <string name="alert_set_date">Please Enter Date!</string>
    <string name="alert_set_time">Please Enter Time!</string>
    <string name="alert_gmail">Please Enter Gmail!</string>
    <string name="alert_starting_point">Please Enter The Starting Point!</string>
    <string name="lb_route_fea">Route Features</string>
    <string name="lb_route_note">Notes</string>
    <string name="lb_route_easy">Easy</string>
    <string name="lb_route_med">Medium</string>
    <string name="lb_route_hard">Hard</string>
    <string name="lb_route_hilly">Hilly</string>
    <string name="lb_route_flat">Flat</string>
    <string name="lb_route_street">Street</string>
    <string name="lb_route_trail">Trail</string>
    <string name="lb_route_even">Even</string>
    <string name="lb_route_uneven">Uneven</string>
    <string name="bt_done">DONE</string>

    <string name="teammates_routes">Teammates\' Routes</string>
    <string name="your_routes">Your Routes</string>

    <string name="title_team_member_list">Team Member List</string>
    <string name="title_invited_team_member_list">Invited Team Member List</string>
    <string name="title_invitation">Invitations</string>
    <string name="title_team">Team</string>
    <string name="title_members">Members</string>
    <string name="title_proposed_walk">Proposed Walk</string>
    <string name="default_inviter_name_none">No one has invited you to join a team yet.</string>
    <string name="btn_accept_string">Accept</string>
    <string name="btn_decline_string">Decline</string>

    <string name="firstname_invitation">First Name</string>
    <string name="lastname_invitation">Last Name</string>
    <string name="gmail_invitation">Gmail</string>
    <string name="gmail_invitation_edit">example@gmail.com</string>
    <string name="bt_invite">Send Invite</string>
    <string name="bt_propose">Propose Walk</string>

    <string name="txt_proposed_rout_name">Name</string>
    <string name="txt_proposed_date">Date</string>
    <string name="txt_proposed_time">Time</string>
    <string name="bt_schedule">Schedule Walk</string>
    <string name="bt_withdraw">Withdraw Walk</string>
    <string name="bt_acceptWalk">Accept</string>
    <string name="bt_declineTime">Decline/Time</string>
    <string name="bt_declineRoute">Decline/Route</string>
    <string name="txt_proposed_steps">Steps</string>
    <string name="txt_proposed_startingPoint">Starting Point</string>

    <string name="set_propose_time">Enter Time</string>
    <string name="set_propose_date">Enter Date</string>
    <string name="txt_set_propose_time">Time: </string>
    <string name="txt_set_propose_date">Date: </string>
    <string name="bt_set_date">Done</string>
    <string name="txt_proposed_mile">Distance</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="start_label">Starting Point:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>



