...
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtRouteName"
            android:layout_width="213dp"
            android:layout_height="45dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
...
                android:layout_marginEnd="15dp"
                android:text="@string/details_features_outandback" />

        </RadioGroup>

        <EditText
            android:id="@+id/txtNotes"
            android:layout_width="274dp"
            android:layout_height="139dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="24dp"
            android:background="#B3CFCFCF"
            android:gravity="top|left"
...
            android:scrollHorizontally="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup5" />

        <Button
            android:id="@+id/btDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#2196F3"
            android:text="@string/bt_done"
...
