<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_walk"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_walk" />

    <item
        android:id="@+id/navigation_routes"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_routes" />

    <item
        android:id="@+id/navigation_team"
        android:icon="@drawable/ic_team_black_24dp"
        android:title="@string/title_team" />
</menu>
